Completes footer. Fixes horizontal scrolling issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,8 @@ body {
 
 header {
   height: $logo-height - $navbar-height / 2;
+  outline: 1px solid blue;
+  overflow: hidden;
   
   .logo {
     height: $logo-height;
@@ -33,6 +35,7 @@ header {
 
   .header-info {
     position: relative;
+    width: 100%;
     left: $logo-width - $logo-width * 0.25;
     top: $logo-height * 0.1;
   }
@@ -81,6 +84,28 @@ nav {
   }
 
   a, a:link a:visited {
+    color: white;
+  }
+}
+
+footer {
+  position: fixed;
+  bottom: 0px;
+  background-color: $blue;
+  height: 40px;
+  width: 100%;
+  color: white;
+  font-size: .75em;
+  text-align: center;
+  padding-top: 5px;
+
+  p {
+    margin: 0;
+    padding: 0;
+  }
+
+  a, a:link, a:visited {
+    text-decoration: underline;
     color: white;
   }
 }
